# JsonMapper

./: CMakeLists.txt  LICENSE  README.md  main.cpp  xmake.lua
example/: example1.cpp  example2.cpp  example2_opt.cpp  example3.cpp
include/jsonmapper/: DeserializeFromJson.h  JsonMapper.h  SerializeToJson.h  StringView.h
include/jsonmapper/types/deserialize/: basic_types.h  list.h  map.h  raw_ptr.h  set.h  shared_ptr.h  string.h  unordered_map.h  unordered_set.h  vector.h
include/jsonmapper/types/serialize/: basic_types.h  list.h  map.h  raw_ptr.h  set.h  string.h  unordered_map.h  vector.h
jsoncppversion/: CMakeLists.txt
jsoncppversion/test/: jsoncpp2
test/: jsoncpp  main.cpp  main2.cpp
